trunk/tests/kiama/negative/name_errors/L1/7_whilename2.ob
MODULE whilename;

VAR
    avar : INTEGER;

BEGIN
    WHILE bvar = TRUE DO
        avar := 1
    END
END whilename.
